1.2.x/operation/helm/values/index.md
> For AI agents: this documentation is indexed at https://docs.united-security-providers.ch/usp-core-waap/llms.txt, and every page is available as markdown at its own address plus index.md.

# usp-core-waap-operator {#usp-core-waap-operator}

![Version: 1.2.1](https://img.shields.io/badge/Version-1.2.1-informational?style=flat-square) ![Type: application](https://img.shields.io/badge/Type-application-informational?style=flat-square) ![AppVersion: 1.1.0](https://img.shields.io/badge/AppVersion-1.1.0-informational?style=flat-square)

Helm chart for the USP Core WAAP operator.

## Values {#values}

| Key | Type | Default | Description |
|---|---|---|---|
| operator.config | object | `{"waapSpecDefaults":{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap","version":"1.2.0"},"waapSpecTrafficProcessingDefaults":{"icap":{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-ext-proc-icap","version":"0.0.10"},"openapi":{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-ext-proc-openapi","version":"0.0.4"}},"watchedNamespaces":[]}` | Settings for operator config |
| operator.config.waapSpecDefaults | object | `{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap","version":"1.2.0"}` | *Optional*: operation defaults, see field 'operation' in the Core WAAP CRD for possible settings and merge behavior |
| operator.config.waapSpecTrafficProcessingDefaults | object | `{"icap":{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-ext-proc-icap","version":"0.0.10"},"openapi":{"image":"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-ext-proc-openapi","version":"0.0.4"}}` | *Optional*: operation defaults for traffic processors per type, see field 'operation' in the Core WAAP CRD under 'trafficProcessing' for possible settings and merge behavior |
| operator.config.watchedNamespaces | list | `[]` | *Optional*: list of namespaces for which to process custom resources or ingress manifests (defaults to all). |
| operator.image | string | `"uspregistry.azurecr.io/usp/core/waap/usp-core-waap-operator"` | Operator container image |
| operator.imagePullSecretName | string | `""` | *Optional*: Name of the image pull secret to be used by the service account |
| operator.replicas | int | `1` | Number of replicas (0 or 1) |
| operator.resources | object | `{"limits":{"cpu":"","memory":""},"requests":{"cpu":"","memory":""}}` | Resource settings for WAAP operator NOTE: If the fields are left empty, the operator deployment will not contain the corresponding settings, and as a consequence, the clusters own defaults will apply. |
| operator.resources.limits.cpu | string | `""` | CPU resource limit per request |
| operator.resources.limits.memory | string | `""` | Memory resource limit per request |
| operator.resources.requests.cpu | string | `""` | CPU resources required per request |
| operator.resources.requests.memory | string | `""` | Memory resources required per request |
| operator.serviceAccount | string | `"usp-core-waap-operator"` | Name of service account |
| operator.version | string | `"1.1.0"` | Version of operator to deploy |

---

Autogenerated from chart metadata using [helm-docs v1.14.2](https://github.com/norwoodj/helm-docs/releases/v1.14.2)
